--- a/LaslesVPN/css/LaslesVPN.css
+++ b/LaslesVPN/css/LaslesVPN.css
@@ -25,6 +25,11 @@
 .container {
     max-width: 1140px;
     margin: 0 auto;
+    width: 90%;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body, h1, h2, h3, h4, h5, h6, p {
@@ -37,6 +42,10 @@ body {
 
 ul {
     list-style: none;
+}
+
+img{
+    max-width: 100%;
 }
 
 /* Fonts */
@@ -92,25 +101,52 @@ ul {
 /* Buttons */
 
     button {
-        font-size: 16px;
-        line-height: 18px;
+        font-size: 1rem;
+        line-height: 112.5%;
         position: relative;
         z-index: 2;
         cursor: pointer;
+        position: relative;
+        z-index: 1;
+        transition: 300ms ease;
     }
 
     button.primary {
         color: var(--white);
         font-weight: 700;
-        padding: 17px 77px;
+        padding: 1em 4.8125em;
         background-color: var(--red);
         border: none;
         border-radius: var(--radius);
         height: 60px;
     }
 
-    button.primary:hover {
+    button.primary::after {
+        content: '';
+        display: block;
+        background-color: var(--red);
+        opacity: 35%;
+        width: 100%;
+        height: 60px;
+        filter: blur(14px);
+        position: absolute;
+        top: 30px;
+        left: 0;
+        transform: scale(80%);
+        z-index: -1;
+        transition: 300ms ease;
+    }
+
+    button:hover {
         filter: brightness(120%);
+    }
+
+    button.primary:hover {
+        transform: translateY(5px);
+    }
+
+    button.primary:hover::after {
+        top: 20px;
     }
 
     .hero_content::after {
@@ -125,7 +161,7 @@ ul {
         top: -40px;
         left: 15px;
     }
-
+  
     .active::after {
         content: '';
         display: block;
@@ -138,6 +174,7 @@ ul {
         top: -30px;
         left: 20px;
         z-index: 1;
+        transition: 300ms ease;
     }
 
     button.secondary {
@@ -148,7 +185,11 @@ ul {
         border: 1px solid  var(--red);
         color: var(--red);
         max-width: 178px
-    }   
+    } 
+
+    button.secondary:not(.red):hover {
+        background-color: #f538380e;
+    }
 
     button.red {
         background-color: var(--red);
@@ -162,8 +203,9 @@ ul {
         border-radius: 100px;
         background-color: transparent;
         color: var(--black);
-    }   
-
+    } 
+    
+  
 /* Hero */
 
     .hero {
@@ -177,14 +219,16 @@ ul {
         align-items: center;
     }
 
-    .menu ul {
+    .menu nav {
         display: flex;
         list-style: none;
+        flex-wrap: wrap;
     }
 
-    .menu li {
+    .menu a {
         margin: 0 20px;
         color:  var(--gray);
+        text-decoration: none;
     }
 
     .menu_buttons {
@@ -196,11 +240,17 @@ ul {
         align-items: center;
         justify-content: left;
         margin: 89px 0 102px ;
+
+    }
+
+    .inner__hero img {
+        max-width: 100%;
     }
 
     .hero_content {
         max-width: 555px;
-        margin-right: 40px;
+        margin-right: 5vw;
+        width: 100%;
     }
 
     .hero_content p {
@@ -217,9 +267,11 @@ ul {
         display: flex;
         justify-content: space-around;
         background-color: var(--white);
-        padding: 37px 0;
+        padding: 37px 60px;
         position: relative;
         z-index: 2;
+        border-radius: 10px;
+        flex-wrap: wrap;
     }
 
     .divider {
@@ -244,37 +296,25 @@ ul {
 
 /* Shadow */
 
-.numbers_shadow {
-    width: 1068px;
-    height: 190px;
-    background-color: #0D1025;
-    opacity: 0.06;
-    filter: blur(54px);
-    border-radius: 10px;
-    margin: 0 auto;
+    .shadow::before {
+        content: "";
+        background-color: #0D1025;
+        position: absolute;
+        width: 93%;
+        height: 190px;
+        top: 60px;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 1;
+        filter: blur(54px);
+        opacity: 0.06;
+        border-radius: 10px;
+    }
 
-    position: absolute;
-    z-index: 0;
-    top: 50px;
-    left: 35px;
-    
-}
-
-.cta_shadow {
-    width: 1077px;
-    height: 250px;
-    background-color: #0D1025;
-    opacity: 0.06;
-    filter: blur(14px);
-    border-radius: 10px;
-    margin: 0 auto;
-
-    position: absolute;
-    z-index: 0;
-    top: -84px;
-    left: 31px;
-
-}
+    .footer .shadow::before {
+        height: 250px;
+        top: 16px;
+    }
 
 /* Features */
 
@@ -282,11 +322,16 @@ ul {
         display: flex;
         align-items: center;
         padding: 95px 0 131px;
+
+    }
+
+    .features__inner img {
+        max-width: 100%;
     }
 
     .features_content {
         max-width: 428px;
-        margin-left: 170px;
+        margin-left: 10vw;
     }
 
     .features_content p {
@@ -316,9 +361,10 @@ ul {
     }
 
     .plan_stack {
-        display: flex;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
         margin: 60px 0 0;
+        gap: 50px;
     }
 
     .plan_card:last-child {
@@ -326,17 +372,24 @@ ul {
     }
 
     .plan_card {
-        width: 32%;
-        height: 760px;
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        width: 100%;
+        min-height: auto;
         border: solid 1px var(--border);
         border-radius: var(--radius);
-        position: relative;
-        margin: 0 25px;
+        padding-bottom: 50px;
     }
 
     .plan_img {
         margin: 60px auto;
-        display: block;
+        display: flex;
+        justify-content: center;
+    }
+
+    .card_text {
+        height: 100%;
     }
 
     .check_thin > li {
@@ -346,13 +399,10 @@ ul {
     }
 
     .plan_card_bottom {
-        position: absolute;
-        z-index: 1;
-        bottom: 50px;
-        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-self: end;
     }
 
     .plan_card_bottom h4 {
@@ -372,30 +422,271 @@ ul {
 /* Network */
 
     .network__inner .map {
-        margin: 155px 0 35px;
+        margin: 155px auto 35px;
+        position: relative;
+        max-width: 1060px;
+    }
+
+    .network__inner .world {
+        width: 100%;
+    }
+
+    .network-dot {
+        position: absolute;
+        width: 5%;
+        transition: 300ms;
+        transform: scale(0);
+        cursor: pointer;
+    }
+
+    .network-dot img {
+        width: 100%;
+        box-shadow: 0px 12.2597px 12.2597px rgba(135, 135, 135, 0.14);
+        border-radius: 100%;
+    }
+
+    .visible {
+        transform: scale(1);
+    }
+
+    .network-dot:hover {
+        transform: translateY(-5px);
+        transition-delay: 0;
+    }
+
+    .network-dot:before {
+        content: attr(title);
+        text-align: center;
+        color: white;
+        padding: 10px;
+        background-color: rgba(17, 19, 35, 0.95);
+        position: absolute;
+        bottom: 106%;
+        left: 50%;
+        transform: translateX(-50%);
+        z-index: 3;
+        display: block;
+        border-radius: 5px;
+        transition: 200ms;
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .network-dot:hover:before {
+        opacity: 1;
+        visibility: visible;
+    }
+
+    .africa-left {
+        left: 44.71%;
+        top: 49.90%;
+        max-width: 25.5px;
+    }
+
+    .africa-center {
+        left: 52.45%;
+        top: 51.58%;
+        max-width: 43px;
+
+    }
+    
+    .africa-down {
+        left: 52.54%;
+        top: 71.13%;
+        max-width: 36.7px;
+    }
+
+    .australia-left {
+        left: 79.33%;
+        top: 75.90%;
+        max-width: 35.4px;
+    }
+    
+    .australia-down {
+        left: 86.69%;
+        top: 81.19%;
+        max-width: 19.5px;
+    }
+
+
+    .europe-up {
+        left: 48.77%;
+        top: 19.18%;
+        max-width: 25.6px;
+    }
+
+    .europe-middle {
+        left: 52.45%;
+        top: 29.80%;
+        max-width: 34.4px;
+    }
+    
+    .europe-right {
+        left: 61.79%;
+        top: 21.23%;
+        max-width: 33.8px;
+    }
+
+    .asia-up {
+        left: 69.25%;
+        top: 13.97%;
+        max-width: 15.3px;
+    }
+
+    .asia-middle {
+        left: 71.32%;
+        top: 24.39%;
+        max-width: 43.3px;
+    }
+
+    .asia-down-left {
+        left: 67.55%;
+        top: 44.69%;
+        max-width: 35.32px;
+    }
+
+    .asia-down {
+        left: 75.28%;
+        top: 40.41%;
+        max-width: 19.55px;
+    }
+
+    .asia-middle-right {
+        left: 81.79%;
+        top: 17.13%;
+        max-width: 19.5px;
+    }
+
+    .asia-right {
+        left: 93.58%;
+        top: 15.64%;
+        max-width: 25.6px;
+    }
+
+    .greenland-left {
+        left: 25.47%;
+        top: 0.00%;
+        max-width: 19.5px;
+    }
+       
+    .greenland-middle {
+        left: 33.21%;
+        top: 5.03%;
+        max-width: 25.6px;
+    }
+
+    .greenland-down {
+        left: 33.87%;
+        top: 18.25%;
+        max-width: 15.3px;
+    }
+
+    .greenland-right {
+        left: 39.43%;
+        top: 2.98%;
+        max-width: 21.1px;
+    }
+
+    .north-america-left {
+        left: 3.30%;
+        top: 17.50%;
+        max-width: 17px;
+    }
+    
+    .north-america-up-middle {
+        left: 11.13%;
+        top: 15.64%;
+        max-width: 25.6px;
+    }
+
+    .north-america-up-right {
+        left: 18.30%;
+        top: 17.32%;
+        max-width: 25.6px;
+    }
+
+    .north-america-middle {
+        left: 15.00%;
+        top: 26.44%;
+        max-width: 37.5px;
+    }
+
+    .north-america-right {
+        left: 26.32%;
+        top: 25.14%;
+        max-width: 25.6px;
+    }
+
+    .north-america-down-right {
+        left: 22.74%;
+        top: 37.80%;
+        max-width: 22.5px;
+    }
+
+    .north-america-down {
+        left: 17.74%;
+        top: 44.13%;
+        max-width: 21.2px;
+    }
+
+    .south-america-up {
+        left: 26.32%;
+        top: 58.85%;
+        max-width: 25.6px;
+    }
+
+    .south-america-middle {
+        left: 29.72%;
+        top: 67.97%;
+        max-width: 34.8px;
+    }
+
+    .south-america-right {
+        left: 34.81%;
+        top: 67.60%;
+        max-width: 17px;
+    }
+
+    .south-america-down {
+        left: 27.55%;
+        top: 82.12%;
+        max-width: 25.6px;
     }
 
     .logos {
         display: flex;
         justify-content: space-between;
         margin-bottom: 50px;
+        gap: min(3%, 60px);
+        width: 100%;
+        /* flex-wrap: wrap; */
+    }
+
+    .logos div {
+        align-self: center;
     }
 
 /* Customers */
 
-    .customer_stack {
-        display: flex;
-        margin: 60px 0;
-        /* padding-left: calc(50% - 570px); */
-        gap: 50px;
-        overflow-x: visible;
-        transition: margin 400ms;
-        justify-content: flex-start;
+    .customers {
+        overflow-x: hidden;
     }
 
-  
-    .customer_stack::-webkit-scrollbar {
-        width: 0;
+    .wrapper {
+        margin: 60px 0;
+        position: relative;
+        height: 254px;
+    }
+
+    .customer_stack {
+        display: flex;
+        gap: 50px;
+        transition: margin 400ms;
+        justify-content: flex-start;
+        position: absolute;
+        left: 0;
+        top: 0;
+        height: 254px;
     }
 
     .customer_card {
@@ -524,7 +815,8 @@ ul {
         display: flex;
         justify-content: space-between;
         position: relative;
-        top: -70px
+        top: -70px;
+        flex-wrap: wrap-reverse;
     }
 
     .footer_left p {
@@ -547,10 +839,11 @@ ul {
 
     .footer_right {
         display: flex;
+        flex-wrap: wrap;
     }
 
     .footer_rigth_column {
-        margin-left: 127px;
+        margin-left: clamp(20px, 8vw, 127px);
         padding: 0;
     }
 
@@ -562,4 +855,90 @@ ul {
     .footer_rigth_column li {
     margin-bottom: 10px;
     }
+
+ 
+@media screen and (max-width: 1000px) {
+    
+    .inner__hero {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .hero_content {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+        margin-right: 0;
+    }
+
+    .menu nav {
+        display: none;
+    }
+
+    .plan_stack {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .plan_card:last-child {
+        flex-direction: row;
+        border: 2px solid var(--red);
+        grid-column: 1 / 3;
+        justify-content: space-between;
+        padding: 60px 60px;
+        position: relative;
+        align-items: center;
+    }
+
+    .plan_card:last-child .plan_img {
+        margin: 0;
+        position: absolute;
+        right: calc((50% - 100px) / 2);
+        bottom: 50%;
+        transform: translateY(0);
+    }
+
+    .card_text {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .plan_card:last-child .plan_card_bottom {
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-self: end;
+        width: 100%;
+        transform: translateY(75%);
+    }
+
+    .cta__inner {
+        flex-direction: column;
+        text-align: center;
+        gap: 40px;
+
+    }
+
+    .footer__inner > div {
+        width: 100%;
+        text-align: center;
+    }
+
+    .footer_rigth_column {
+        margin-left: 0;
+        margin: 0 auto 50px;
+    }
+
+    .footer_rigth_column h5 {
+        text-align: center;
+    }
+
+    .footer_left p  {
+       max-width: unset;
+    }
+}
 
