--- a/LaslesVPN/css/LaslesVPN.css
+++ b/LaslesVPN/css/LaslesVPN.css
@@ -17,6 +17,7 @@
     src: url(../fonts/Rubik/Rubik-VariableFont_wght.ttf) format('woff2');
 }
 
+
 * {
     box-sizing: border-box ;
     font-family: 'Rubik', sans-serif;
@@ -106,9 +107,10 @@ img{
         position: relative;
         z-index: 2;
         cursor: pointer;
-        position: relative;
-        z-index: 1;
         transition: 300ms ease;
+        outline: none;
+        border: none;
+        box-shadow: none;
     }
 
     button.primary {
@@ -181,15 +183,23 @@ img{
         font-weight: 500;
         padding: 0.813em 2.813em;
         border-radius: 100px;
-        background-color: transparent;
-        border: 1px solid  var(--red);
+        border: 1px solid var(--red);
+        background-color: #fff;
         color: var(--red);
-        max-width: 178px
+        max-width: 178px;
+        position: relative;
+        z-index: 3;
+        box-shadow: 0;
     } 
 
-    button.secondary:not(.red):hover {
-        background-color: #f538380e;
+    button.secondary:hover {
+        transform: translateY(2px);
     }
+
+    button.secondary:not(.red):hover {
+        background-color: #f5383809;
+    }
+
 
     button.red {
         background-color: var(--red);
@@ -204,7 +214,10 @@ img{
         background-color: transparent;
         color: var(--black);
     } 
-    
+
+    button.tetriary:hover {
+        transform: translateY(2px);
+    }
   
 /* Hero */
 
@@ -235,6 +248,11 @@ img{
         margin: 0 20px;
         color:  var(--gray);
         text-decoration: none;
+        transition: color 300ms;
+    }
+
+    .menu a:hover {
+        color:  var(--red);
     }
 
     .menu_buttons {
@@ -275,8 +293,9 @@ img{
         position: relative;
         z-index: 2;
         border-radius: 10px;
-        padding: 38px;
+        padding: 38px 0;
         min-height: 200px;
+        box-sizing: border-box;
     }
 
     .divider {
@@ -334,7 +353,7 @@ img{
         max-width: 428px;
         margin-left: 10vw;
     }
-
+           
     .features_content p {
         margin: 20px 0;
     }
@@ -369,7 +388,50 @@ img{
     }
 
     .plan_card:last-child {
-        border: 2px solid var(--red)
+        border: 2px solid var(--red);
+        position: relative;
+        background-color: #fff;
+    }
+
+    .plan_card:last-child:before {
+        content: '';
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        z-index: -1;
+        animation: pulse 4000ms cubic-bezier(0.165, 0.84, 0.44, 1) infinite ;
+        transform-origin: center;
+        border-radius: var(--radius);
+        background-color: var(--red);
+    }
+    
+    @keyframes pulse {
+        0% {
+            transform: scale(1);
+            opacity: 0.5;
+        }
+        75% {
+            transform: scaleY(107.5%) scaleX(115%);
+            opacity: 0;
+        }
+        100% {
+            transform: scaleY(107.5%) scaleX(115%);
+            opacity: 0;
+        }
+    }
+
+    .plan_card:last-child:after {
+        content: '';
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: -1;
+        border-radius: var(--radius);
+        background-color: white;
     }
 
     .plan_card {
@@ -685,7 +747,7 @@ img{
     .wrapper {
         margin: 60px 0;
         position: relative;
-        height: 254px;
+        min-height: 254px;
     }
 
     .customer_stack {
@@ -696,14 +758,20 @@ img{
         position: absolute;
         left: 0;
         top: 0;
-        height: 254px;
+        transition: transform 2s cubic-bezier(0.165, 0.84, 0.44, 1);
+        opacity: 1;
+    }
+
+    .shifted {
+        transform: translateX(-100%);
+        opacity: 0
     }
 
     .customer_card {
         box-shadow: 0 0 0 1px var(--border);
         border-radius: var(--radius);
         min-width: 400px;    
-        height: 100%;
+        min-height: 100%;
         padding: 30px;
         max-width: 600px;
         transition: all 500ms ease;
@@ -835,22 +903,37 @@ img{
         color: #4F5665;
         max-width: 340px;
         margin-top: 20px;
+        
     }
 
     .social img {
         margin: 30px 20px 30px 0px;
         border-radius: 50%;
-        box-shadow: 0px 13px 18px rgba(17, 19, 35, 0.08)
+        box-shadow: 0px 13px 18px rgba(17, 19, 35, 0.08);
+        cursor: pointer;
+        transition: 300ms transform;
+    }
+
+    .social img:hover {
+        transform: translateY(3px);
     }
 
     p.copywrite {
         color: #AFB5C0;
-        ;
     }
 
     .footer_right {
         display: flex;
         flex-wrap: wrap;
+    }
+
+    .footer_right p {
+        cursor: pointer;
+        transition: 300ms color;
+    }
+
+    .footer_right p:hover {
+        color: var(--red);
     }
 
     .footer_rigth_column {
@@ -978,11 +1061,10 @@ img{
 
 
 @media screen and (max-width: 800px) {
-
-    .numbers__inner {
-        text-align: center;
-        flex-direction: column;
+    .customer_stack {
+        position: relative;
     }
+
 
     .numbers .shadow::before {
         min-height: 300px;
@@ -996,6 +1078,10 @@ img{
     .features_content {
         max-width: 85%;
         margin-left: 0;
+    }
+
+    .network__inner .map {
+        margin: 5vh auto 8vh;
     }
 }
 
@@ -1018,8 +1104,19 @@ img{
         margin: 8vh 0 3vh;
     }
 
+    .numbers__inner {
+        text-align: center;
+        flex-direction: column;
+    }
+
     .numbers .shadow::before {
         height: 100%;
+    }
+
+    .divider {
+        width: 80%;
+        height: 2px;
+        margin: 0 auto;
     }
 }
 
@@ -1028,9 +1125,15 @@ img{
         font-size: 14px;
     }
 
+    .numbers__inner {
+        align-items: center;
+    }
+
     .numbers_card {
         justify-content: start;
-        padding-left: 18vw;
+        padding: 32px 0;
+        text-align: left;
+        width: 180px;
     }
 
     .features__inner {
@@ -1041,26 +1144,17 @@ img{
         padding: 6vh 0 10vh;
     }
 
-    .network__inner .map {
-        margin: 5vh auto 8nh;
-    }
-
     .plan_stack {
         grid-template-columns: 1fr;
     }
 
     .customer_card {
-        min-width: unset;
+        min-width: 90vw;
         width: 90vw;    
     }
 
     .customer_slider {
         justify-content: center;
-    }
-
-    .divider {
-        width: 100%;
-        height: 2px;
     }
 
     .footer .shadow::before {
